--- a/Hotel.html
+++ b/Hotel.html
@@ -11,7 +11,7 @@
 <nav style="display: flex; align-items: center; justify-content: space-between; background-color: #1f1f1f; padding: 10px;">
         <div style="display: flex; align-items: center; gap: 10px;">
             <img src="images/logo.png" alt="Dream Stay Logo" style="width: 100px; height: auto;">
-<a href="/Home.html" style="text-decoration: none; color: white; font-size: xx-large; font-weight: bolder;">Dream Stay</a>
+            <a href="/Home.html" style="text-decoration: none; color: white; font-size: xx-large; font-weight: bolder;">Dream Stay</a>
         </div>
         <div style="display: flex; justify-content: center; flex-grow: 1; gap: 40px;">
             <a href="Home.html" style="text-decoration: none; font-size: x-large; color: white;font-weight: bolder;">Home</a>
@@ -25,17 +25,21 @@
         </div>
     </nav>
 
-
     <div style="padding: 40px 10%; text-align: left;">
         <h2 style="font-size: 2.5rem; margin-bottom: 10px;">Discover Stays Across Pakistan</h2>
         <p style="font-size: 1.1rem; color: #cccccc; max-width: 700px;">
             Explore handpicked hotels in Pakistan’s most popular cities. Compare prices, locations, and ratings to find the perfect stay for your next trip.
         </p>
+        <p id="searchSummary" style="font-size: 0.95rem; color: #aaaaaa; margin-top: 10px;"></p>
+        <div style="margin-top: 20px; display: flex; gap: 10px; max-width: 500px;">
+            <input id="hotelSearchInput" type="text" placeholder="Filter by city or hotel name" style="flex:1; padding: 10px 12px; border-radius: 8px; border: 1px solid #333; background-color: #1f1f1f; color: white; font-size: 0.95rem; box-sizing: border-box;">
+            <button id="hotelSearchClear" style="padding: 10px 16px; border-radius: 8px; border: none; background-color: #007BFF; color: white; cursor: pointer; font-size: 0.9rem;">Clear</button>
+        </div>
     </div>
 
-    <div style="padding: 0 10% 40px 10%; display: flex; flex-direction: column; gap: 25px;">
+    <div id="pakHotels" style="padding: 0 10% 40px 10%; display: flex; flex-direction: column; gap: 25px;">
 
-        <div style="background-color: #1f1f1f; border-radius: 20px; padding: 20px; display: flex; flex-wrap: wrap; gap: 20px; box-shadow: 0 4px 10px rgba(0,0,0,0.4);">
+        <div class="pak-hotel-card" style="background-color: #1f1f1f; border-radius: 20px; padding: 20px; display: flex; flex-wrap: wrap; gap: 20px; box-shadow: 0 4px 10px rgba(0,0,0,0.4);">
             <img src="Images/Lahore.jpg" alt="Lahore Heritage Hotel" 
                  style="width: 260px; height: 180px; object-fit: cover; border-radius: 16px;">
             <div style="flex: 1; min-width: 220px; display: flex; flex-direction: column; justify-content: space-between;">
@@ -54,7 +58,7 @@
             </div>
         </div>
 
-        <div style="background-color: #1f1f1f; border-radius: 20px; padding: 20px; display: flex; flex-wrap: wrap; gap: 20px; box-shadow: 0 4px 10px rgba(0,0,0,0.4);">
+        <div class="pak-hotel-card" style="background-color: #1f1f1f; border-radius: 20px; padding: 20px; display: flex; flex-wrap: wrap; gap: 20px; box-shadow: 0 4px 10px rgba(0,0,0,0.4);">
             <img src="Images/hotel2.jpg" alt="Karachi Sea View Suites" 
                  style="width: 260px; height: 180px; object-fit: cover; border-radius: 16px;">
             <div style="flex: 1; min-width: 220px; display: flex; flex-direction: column; justify-content: space-between;">
@@ -73,7 +77,7 @@
             </div>
         </div>
 
-        <div style="background-color: #1f1f1f; border-radius: 20px; padding: 20px; display: flex; flex-wrap: wrap; gap: 20px; box-shadow: 0 4px 10px rgba(0,0,0,0.4);">
+        <div class="pak-hotel-card" style="background-color: #1f1f1f; border-radius: 20px; padding: 20px; display: flex; flex-wrap: wrap; gap: 20px; box-shadow: 0 4px 10px rgba(0,0,0,0.4);">
             <img src="Images/hotel3.jpg" alt="Islamabad Hills Residency" 
                  style="width: 260px; height: 180px; object-fit: cover; border-radius: 16px;">
             <div style="flex: 1; min-width: 220px; display: flex; flex-direction: column; justify-content: space-between;">
@@ -92,7 +96,7 @@
             </div>
         </div>
 
-        <div style="background-color: #1f1f1f; border-radius: 20px; padding: 20px; display: flex; flex-wrap: wrap; gap: 20px; box-shadow: 0 4px 10px rgba(0,0,0,0.4);">
+        <div class="pak-hotel-card" style="background-color: #1f1f1f; border-radius: 20px; padding: 20px; display: flex; flex-wrap: wrap; gap: 20px; box-shadow: 0 4px 10px rgba(0,0,0,0.4);">
             <img src="Images/hotel4.jpg" alt="Hunza Valley Lodge" 
                  style="width: 260px; height: 180px; object-fit: cover; border-radius: 16px;">
             <div style="flex: 1; min-width: 220px; display: flex; flex-direction: column; justify-content: space-between;">
@@ -111,7 +115,7 @@
             </div>
         </div>
 
-        <div style="background-color: #1f1f1f; border-radius: 20px; padding: 20px; display: flex; flex-wrap: wrap; gap: 20px; box-shadow: 0 4px 10px rgba(0,0,0,0.4);">
+        <div class="pak-hotel-card" style="background-color: #1f1f1f; border-radius: 20px; padding: 20px; display: flex; flex-wrap: wrap; gap: 20px; box-shadow: 0 4px 10px rgba(0,0,0,0.4);">
             <img src="Images/hotel5.jpg" alt="Murree Pine Retreat" 
                  style="width: 260px; height: 180px; object-fit: cover; border-radius: 16px;">
             <div style="flex: 1; min-width: 220px; display: flex; flex-direction: column; justify-content: space-between;">
@@ -427,6 +431,66 @@
 
         <p>&copy 2025 Dream Stay. All rights reserved.</p>
     </footer>
+
+<script>
+    const params = new URLSearchParams(window.location.search);
+    const cityParam = params.get("city");
+    const checkInParam = params.get("checkIn");
+    const checkOutParam = params.get("checkOut");
+    const guestsParam = params.get("guests");
+
+    const summaryEl = document.getElementById("searchSummary");
+    if (summaryEl && (cityParam || checkInParam || checkOutParam || guestsParam)) {
+        const parts = [];
+        if (cityParam) parts.push("Destination: " + cityParam);
+        if (checkInParam && checkOutParam) parts.push("Dates: " + checkInParam + " to " + checkOutParam);
+        else if (checkInParam) parts.push("Check-in: " + checkInParam);
+        if (guestsParam) parts.push("Guests: " + guestsParam);
+        summaryEl.textContent = "Search: " + parts.join(" | ");
+    }
+
+    const hotelSearchInput = document.getElementById("hotelSearchInput");
+    const hotelSearchClear = document.getElementById("hotelSearchClear");
+    const pakHotelCards = document.querySelectorAll(".pak-hotel-card");
+
+    function applyHotelFilter(value) {
+        const q = value.trim().toLowerCase();
+        pakHotelCards.forEach(function(card) {
+            if (!q) {
+                card.style.display = "";
+            } else {
+                const text = card.textContent.toLowerCase();
+                if (text.indexOf(q) !== -1) {
+                    card.style.display = "";
+                } else {
+                    card.style.display = "none";
+                }
+            }
+        });
+    }
+
+    if (hotelSearchInput) {
+        hotelSearchInput.addEventListener("input", function() {
+            applyHotelFilter(hotelSearchInput.value);
+        });
+    }
+
+    if (hotelSearchClear) {
+        hotelSearchClear.addEventListener("click", function() {
+            hotelSearchInput.value = "";
+            applyHotelFilter("");
+        });
+    }
+
+    if (cityParam && hotelSearchInput) {
+        hotelSearchInput.value = cityParam;
+        applyHotelFilter(cityParam);
+        const pakSection = document.getElementById("pakHotels");
+        if (pakSection) {
+            pakSection.scrollIntoView({ behavior: "smooth" });
+        }
+    }
+</script>
 
 </body>
 </html>
